--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -680,3 +680,61 @@ ul.messenger .messenger-message-inner,.ngCellText {
 .tooltip {
   z-index:1240000 !important;
 }
+
+.paraTree {
+  padding:3px;
+  -webkit-border-radius:4px;
+  -moz-border-radius:4px;
+  border-radius:4px;
+  -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+}
+.paraTree li {
+  list-style-type:none;
+  margin:0;
+  padding:10px 5px 0 5px;
+  position:relative
+}
+.paraTree li::before, .paraTree li::after {
+  content:'';
+  left:-20px;
+  position:absolute;
+  right:auto
+}
+.paraTree li::before {
+  border-left:1px solid #999;
+  bottom:50px;
+  height:100%;
+  top:0;
+  width:1px
+}
+.paraTree li::after {
+  border-top:1px solid #999;
+  height:20px;
+  top:25px;
+  width:25px
+}
+.paraTree li span {
+  -moz-border-radius:5px;
+  -webkit-border-radius:5px;
+  border:1px solid #999;
+  border-radius:5px;
+  display:inline-block;
+  padding:3px 8px;
+  text-decoration:none
+}
+.paraTree li.sub_li>span {
+  cursor:pointer
+}
+.paraTree>ul>li::before, .paraTree>ul>li::after {
+  border:0
+}
+.paraTree li:last-child::before {
+  height:30px
+}
+.paraTree li.sub_li>span:hover, .paraTree li.sub_li>span:hover+ul li span {
+  background:#eee;
+  border:1px solid #94a0b4;
+  color:#000
+}
