--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -552,7 +552,7 @@ ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-mess
 }
 
 /** Enable the text selectable on notification of Messenger **/
-ul.messenger .messenger-message-inner ,.ngCellText{
+ul.messenger .messenger-message-inner ,.ngCellText,.tree-label,.tree-leaf{
   -moz-user-select: text;
   -webkit-user-select: text;
   -o-user-select: text;
