--- a/webapp/app/partials/cubeDesigner/advanced_settings.html
+++ b/webapp/app/partials/cubeDesigner/advanced_settings.html
@@ -87,7 +87,7 @@
                       </ui-select-choices>
                     </ui-select>
 
-                    <p ng-if="state.mode=='view'" style="word-wrap: break-word; word-break: normal;max-width: 1000px ">
+                    <p ng-if="state.mode=='view'">
                       {{aggregation_group.select_rule.mandatory_dims}}</p>
                   </td>
                   <td class="col-xs-1">
@@ -122,7 +122,7 @@
                               {{column}}
                             </ui-select-choices>
                           </ui-select>
-                          <p ng-if="state.mode=='view'" style="word-wrap: break-word; word-break: normal;max-width: 1000px ">
+                          <p ng-if="state.mode=='view'">
                             {{hierarchyDims}}</p>
 
                         </td>
@@ -167,7 +167,7 @@
                               {{column}}
                             </ui-select-choices>
                           </ui-select>
-                          <p ng-if="state.mode=='view'" style="word-wrap: break-word; word-break: normal;max-width: 1000px ">
+                          <p ng-if="state.mode=='view'">
                             {{jointDims}}</p>
                         </td>
                         <td class="col-xs-2">
