minor, enable close-on-select for ui-select, dropDown list will not close when user pick up one option

--- a/webapp/app/partials/cubeDesigner/advanced_settings.html
+++ b/webapp/app/partials/cubeDesigner/advanced_settings.html
@@ -139,6 +139,7 @@
                 <td class="col-xs-11">
                     <!-- Dimensions -->
                   <ui-select
+                    close-on-select="false"
                     autofocus="true"
                     on-select="refreshAggregationGroup(cubeMetaFrame.rowkey.aggregation_groups, $index, aggregation_groups)"
                     on-remove="refreshAggregationGroup(cubeMetaFrame.rowkey.aggregation_groups, $index, aggregation_groups)"
