--- a/webapp/app/partials/modelDesigner/model_measures.html
+++ b/webapp/app/partials/modelDesigner/model_measures.html
@@ -44,6 +44,7 @@
         <h3 class="box-title">Select your measures</h3>
 
       <ui-select
+        close-on-select="false"
         ng-if="state.mode=='edit'"
         style="width: 100%"
         autofocus="true"
