--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -612,26 +612,6 @@ ul.messenger .messenger-message-inner,.ngCellText {
   border-radius: 0px !important;
 }
 
-//.cube-models-cntnr{
-//  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
-//  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
-//  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
-//  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
-//  line-height:20px;
-//  opacity:1;
-//  left: 0;
-//  padding:10px;
-//  background:white;
-//}
-
-
-//.cube-models-cntnr.ng-hide {
-//  line-height:0;
-//  opacity:0;
-//  left: -100%;
-//  padding:0 10px;
-//}
-
 .cube-models-cntnr.ng-hide-add {
   -webkit-animation: slideOutLeft 0.5s;;
   animation: slideOutLeft 0.5s;;
@@ -737,4 +717,7 @@ ul.messenger .messenger-message-inner,.ngCellText {
   background:#eee;
   border:1px solid #94a0b4;
   color:#000
+}
+.chosen-container .chosen-results li.active-result{
+  word-break: break-all;
 }
