KYLIN-1412 fix select option long name display issue

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -627,3 +627,6 @@ ul.messenger .messenger-message-inner ,.ngCellText,.tree-label,.tree-leaf{
 .progress.progress-striped {
   background-color:#DCDCDC;
 }
+.chosen-container .chosen-results li.active-result{
+  word-break: break-all;
+}
