KYLIN-1247 set text-overflow for input[placeholder]

--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -19,6 +19,7 @@
 body {
   background-color: #FFF;
 }
+
 /** Fixed bottom footer **/
 .copyright {
   display: table;
@@ -35,8 +36,8 @@ body {
 
 /** port from bootswatch **/
 .bg-primary {
-  color:#fff;
-  background-color:#df691a
+  color: #fff;
+  background-color: #df691a
 }
 
 /***************** Directive ***************/
@@ -154,7 +155,7 @@ body {
 .table-striped > tbody > tr:nth-child(odd).tr-highlight > td,
 .table-striped > tbody > tr:nth-child(odd).tr-highlight > th,
 .table-striped > tbody > tr:nth-child(even).tr-highlight > td,
-.table-striped > tbody > tr:nth-child(even).tr-highlight > th{
+.table-striped > tbody > tr:nth-child(even).tr-highlight > th {
   background-color: #8adbff;
 }
 
@@ -230,10 +231,10 @@ table .radio {
 .cube-detail {
   background-color: white;
 }
+
 .model-detail {
   background-color: white;
 }
-
 
 /* Query content */
 .query-content {
@@ -306,14 +307,13 @@ table .radio {
 .home_jobs:hover {
 }
 
-
 body .modal-dialog {
   width: 80%; /* desired relative width */
   height: 90%;
   //  left: 5%; /* (100%-width)/2 */
   /* place center */
-  margin-left:auto;
-  margin-right:auto;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 pre {
@@ -332,7 +332,7 @@ pre {
   }
 }
 
-.table>tbody+tbody {
+.table > tbody + tbody {
   border-top: 0px solid #1c1e22;
 }
 
@@ -363,17 +363,17 @@ pre {
   stroke-width: 1.5px;
 }
 
-.nav-tabs>li>a {
+.nav-tabs > li > a {
   color: #333;
 }
 
 .table_text_center > tbody > tr > th,
-.table_text_center > tbody > tr > td{
+.table_text_center > tbody > tr > td {
   text-align: center;
 }
 
 .gridStyle {
-  border: 1px solid rgb(212,212,212);
+  border: 1px solid rgb(212, 212, 212);
 }
 
 .metadata_tree_column {
@@ -381,11 +381,9 @@ pre {
   background: url("../image/icon_table.png") no-repeat;
 }
 
-
-
-.nav-pills>li {
-cursor: pointer;
-//background-color: #094868;
+.nav-pills > li {
+  cursor: pointer;
+  //background-color: #094868;
 }
 
 .alert-info {
@@ -402,19 +400,22 @@ treecontrol {
 }
 
 treecontrol > ul {
-//  width: 310px;
+  //  width: 310px;
   overflow: auto;
 }
 
 treecontrol > ul > li {
   padding-left: 0;
 }
-treecontrol li .tree-label{
+
+treecontrol li .tree-label {
   cursor: default;
 }
-treecontrol li treeitem .tree-label{
+
+treecontrol li treeitem .tree-label {
   cursor: pointer;
 }
+
 treecontrol.tree-light li.tree-collapsed i {
   padding: 1px 10px;
   background: url("../image/database.png") no-repeat;
@@ -442,16 +443,15 @@ treecontrol.tree-light li.tree-leaf i {
   background: none no-repeat;
 }
 
-.navbar_default{
+.navbar_default {
   background-color: #2a2a00 !important;
 }
 
-.font_color{
-  color:#1E4B79;
+.font_color {
+  color: #1E4B79;
   font-size: 20px;
   padding-top: 16px;
 }
-
 
 .table-center {
   th {
@@ -464,75 +464,112 @@ treecontrol.tree-light li.tree-leaf i {
 }
 
 .overview-box {
-  width:40%;
-  margin-left:5%;
-  padding:0px;
+  width: 40%;
+  margin-left: 5%;
+  padding: 0px;
 }
 
-.header-button{
-  text-align:center;
-  border-width:4px;
-  background-color:#87b87f!important;
-  border-color:#87b87f!important;
+.header-button {
+  text-align: center;
+  border-width: 4px;
+  background-color: #87b87f !important;
+  border-color: #87b87f !important;
 }
 
-.font-color-default{
-  color:#808080;
+.font-color-default {
+  color: #808080;
 }
 
-.wizard-steps li.active .step,.wizard-steps li.active:before {
-  border-color:yellowgreen;
+.wizard-steps li.active .step, .wizard-steps li.active:before {
+  border-color: yellowgreen;
 }
 
-.modal-content-default{
-background-color:#BED9F7;
-padding:12px;
+.modal-content-default {
+  background-color: #BED9F7;
+  padding: 12px;
 }
 
-.modal-content-default{
-background-color:#ffffff;
+.modal-content-default {
+  background-color: #ffffff;
 }
 
-.tab-style{
+.tab-style {
   padding-top: 15px;
-  padding-bottom:5px;
+  padding-bottom: 5px;
   font-size: 15px;
-  margin-left:0px;
-  border:0px;
-  background-color:#ffffff;
-  }
+  margin-left: 0px;
+  border: 0px;
+  background-color: #ffffff;
+}
 
-
-.table-bordered, .table-bordered>tbody>tr>td, .table-bordered>tbody>tr>th, .table-bordered>tfoot>tr>td, .table-bordered>tfoot>tr>th, .table-bordered>thead>tr>td, .table-bordered>thead>tr>th {
+.table-bordered, .table-bordered > tbody > tr > td, .table-bordered > tbody > tr > th, .table-bordered > tfoot > tr > td, .table-bordered > tfoot > tr > th, .table-bordered > thead > tr > td, .table-bordered > thead > tr > th {
   border: 1px solid #ddd;
 }
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th {
+
+.table > tbody > tr > td, .table > tbody > tr > th, .table > tfoot > tr > td, .table > tfoot > tr > th, .table > thead > tr > td, .table > thead > tr > th {
   padding: 8px;
   line-height: 1.42857143;
   vertical-align: top;
   border-top: 1px solid #ddd;
 }
-.table>tbody{
-    word-break:break-all;
-    word-wrap:break-word;
+
+.table > tbody {
+  word-break: break-all;
+  word-wrap: break-word;
 }
 
 //overlay for loading request
-.loadingOverlay{position:fixed;top:0;right:0;bottom:0;left:0;z-index:1998;width:100%;height:100%;_padding:0 20px 0 0;background:#f6f4f5;display:none;}
-.showbox{position:fixed;top:0;left:50%;z-index:9999;opacity:0;filter:alpha(opacity=0);margin-left:-80px;}
-*html,*html body{background-image:url(about:blank);background-attachment:fixed;}
+.loadingOverlay {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1998;
+  width: 100%;
+  height: 100%;
+  _padding: 0 20px 0 0;
+  background: #f6f4f5;
+  display: none;
+}
+
+.showbox {
+  position: fixed;
+  top: 0;
+  left: 50%;
+  z-index: 9999;
+  opacity: 0;
+  filter: alpha(opacity=0);
+  margin-left: -80px;
+}
+
+*html, *html body {
+  background-image: url(about:blank);
+  background-attachment: fixed;
+}
+
 //*html .showbox,*html .loadingOverlay{position:absolute;top:expression(eval(document.documentElement.scrollTop));}
-#loadingCntnr{
-//  border:1px solid #8CBEDA;color:#37a;font-size:18px;font-weight:bold;
+#loadingCntnr {
+  //  border:1px solid #8CBEDA;color:#37a;font-size:18px;font-weight:bold;
   color: #797979;
   font-size: 16px;
   font-weight: 300;
   line-height: normal;
 }
 
-#loadingCntnr div.loadingWord{width:200px;height:70px;line-height:70px;border:2px solid #D6E7F2;background:#fff;}
-#loadingCntnr img{margin:17px 15px;float:left;display:inline;}
+#loadingCntnr div.loadingWord {
+  width: 200px;
+  height: 70px;
+  line-height: 70px;
+  border: 2px solid #D6E7F2;
+  background: #fff;
+}
 
+#loadingCntnr img {
+  margin: 17px 15px;
+  float: left;
+  display: inline;
+}
 
 /** Customization for Messenger **/
 /** The top lower **/
@@ -541,22 +578,21 @@ ul.messenger.messenger-fixed.messenger-on-top {
 }
 
 /** Set max height and overflow auto **/
-ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-message-inner{
+ul.messenger.messenger-fixed.messenger-on-top .messenger-message .messenger-message-inner {
   max-height: 500px;
   overflow-y: auto;
 }
 
 /** Enable the text selectable on notification of Messenger **/
-ul.messenger .messenger-message-inner,.ngCellText {
+ul.messenger .messenger-message-inner, .ngCellText {
   -moz-user-select: text;
   -webkit-user-select: text;
   -o-user-select: text;
   user-select: text;
 }
 
-
-.load-hive-metawrapper input[type="radio"]{
-  margin-left:0px !important;
+.load-hive-metawrapper input[type="radio"] {
+  margin-left: 0px !important;
 }
 
 /** cube data model and dimensions **/
@@ -604,11 +640,11 @@ ul.messenger .messenger-message-inner,.ngCellText {
   overflow-y: auto;
 }
 
-.models-tree .list-group-item:last-child{
+.models-tree .list-group-item:last-child {
   border-radius: 0px !important;
 }
 
-.models-tree .list-group-item:first-child{
+.models-tree .list-group-item:first-child {
   border-radius: 0px !important;
 }
 
@@ -617,8 +653,9 @@ ul.messenger .messenger-message-inner,.ngCellText {
   animation: slideOutLeft 0.5s;;
   display: block !important;
 }
-.cube-models-cntnr.ng-hide-add+div {
-//  width: 100%;
+
+.cube-models-cntnr.ng-hide-add + div {
+  //  width: 100%;
   right: 0px;
   position: absolute;
   float: right;
@@ -632,7 +669,8 @@ ul.messenger .messenger-message-inner,.ngCellText {
   -webkit-animation: slideInLeft 0.5s;;
   animation: slideInLeft 0.5s;;
 }
-.cube-models-cntnr.ng-hide-remove+div{
+
+.cube-models-cntnr.ng-hide-remove + div {
   position: absolute;
   right: 0;
   width: 75%;
@@ -643,14 +681,16 @@ ul.messenger .messenger-message-inner,.ngCellText {
 }
 
 .form-group.required .control-label:after {
-  content:"*";
-  color:red;
+  content: "*";
+  color: red;
 }
-.streamingParserCtr .chosen-container{
-  width:200px !important;
+
+.streamingParserCtr .chosen-container {
+  width: 200px !important;
 }
+
 .progress.progress-striped {
-  background-color:#DCDCDC;
+  background-color: #DCDCDC;
 }
 
 .clone-cube-window .modal-dialog {
@@ -658,66 +698,89 @@ ul.messenger .messenger-message-inner,.ngCellText {
 }
 
 .tooltip {
-  z-index:1240000 !important;
+  z-index: 1240000 !important;
 }
 
 .paraTree {
-  padding:3px;
-  -webkit-border-radius:4px;
-  -moz-border-radius:4px;
-  border-radius:4px;
-  -webkit-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  -moz-box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05);
-  box-shadow:inset 0 1px 1px rgba(0, 0, 0, 0.05)
+  padding: 3px;
+  -webkit-border-radius: 4px;
+  -moz-border-radius: 4px;
+  border-radius: 4px;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05);
+  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.05)
 }
+
 .paraTree li {
-  list-style-type:none;
-  margin:0;
-  padding:10px 5px 0 5px;
-  position:relative
+  list-style-type: none;
+  margin: 0;
+  padding: 10px 5px 0 5px;
+  position: relative
 }
+
 .paraTree li::before, .paraTree li::after {
-  content:'';
-  left:-20px;
-  position:absolute;
-  right:auto
+  content: '';
+  left: -20px;
+  position: absolute;
+  right: auto
 }
+
 .paraTree li::before {
-  border-left:1px solid #999;
-  bottom:50px;
-  height:100%;
-  top:0;
-  width:1px
+  border-left: 1px solid #999;
+  bottom: 50px;
+  height: 100%;
+  top: 0;
+  width: 1px
 }
+
 .paraTree li::after {
-  border-top:1px solid #999;
-  height:20px;
-  top:25px;
-  width:25px
+  border-top: 1px solid #999;
+  height: 20px;
+  top: 25px;
+  width: 25px
 }
+
 .paraTree li span {
-  -moz-border-radius:5px;
-  -webkit-border-radius:5px;
-  border:1px solid #999;
-  border-radius:5px;
-  display:inline-block;
-  padding:3px 8px;
-  text-decoration:none
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  border: 1px solid #999;
+  border-radius: 5px;
+  display: inline-block;
+  padding: 3px 8px;
+  text-decoration: none
 }
-.paraTree li.sub_li>span {
-  cursor:pointer
+
+.paraTree li.sub_li > span {
+  cursor: pointer
 }
-.paraTree>ul>li::before, .paraTree>ul>li::after {
-  border:0
+
+.paraTree > ul > li::before, .paraTree > ul > li::after {
+  border: 0
 }
+
 .paraTree li:last-child::before {
-  height:30px
+  height: 30px
 }
-.paraTree li.sub_li>span:hover, .paraTree li.sub_li>span:hover+ul li span {
-  background:#eee;
-  border:1px solid #94a0b4;
-  color:#000
+
+.paraTree li.sub_li > span:hover, .paraTree li.sub_li > span:hover + ul li span {
+  background: #eee;
+  border: 1px solid #94a0b4;
+  color: #000
 }
-.chosen-container .chosen-results li.active-result{
+
+.chosen-container .chosen-results li.active-result {
   word-break: break-all;
+}
+
+input[placeholder] {
+  text-overflow: ellipsis;
+}
+
+::-moz-placeholder {
+  text-overflow: ellipsis;
+}
+
+/* firefox 19+ */
+input:-moz-placeholder {
+  text-overflow: ellipsis;
 }
