KYLIN-1456 do not display date as 1970-01-01 as default value in datepicker-popup

--- a/webapp/app/partials/cubeDesigner/refresh_settings.html
+++ b/webapp/app/partials/cubeDesigner/refresh_settings.html
@@ -131,7 +131,7 @@
                       Please input start date when partition date column is defined in model.
                     </small>
                     <!--vier model will convert use filter-->
-                    <span ng-if="state.mode=='view'&&metaModel.model.partition_desc.partition_date_column">{{(cubeMetaFrame.partition_date_start)|reverseToGMT0 }}</span>
+                    <span ng-if="state.mode=='view' && metaModel.model.partition_desc.partition_date_column!=null && metaModel.model.partition_desc.partition_date_column">{{(cubeMetaFrame.partition_date_start)|reverseToGMT0 }}</span>
                   </div>
                 </div>
               </div>
